Fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ textarea, #editor div {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0 20px;
+  overflow: auto;
 }
 
 textarea {
